@@ -442,6 +442,14 @@
 
     <browser:page
         for="*"
+        name="oshmail-view"
+        class=".oshmail_view.OSHmailView"
+        allowed_interface=".interfaces.IOSHmailView"
+        permission="zope2.View"
+        />
+
+    <browser:page
+        for="*"
         name="oshnews-local-view"
         class=".oshnews_view.OSHNewsLocalView"
         permission="zope2.View"
